# ompl-release

./: .hg_archival.txt  .hgtags  0001-Added-install-rule-for-package.xml.patch  0001-Added-package.xml-install-rule-in-CMakeLists.txt.patch  0001-add-install-rule-for-package.xml.patch  0001-change-default-to-having-versioned-include-directory.patch  0001-disable-test-as-mentioned-in-https-bitbucket.org-omp.patch  0001-fix-check-for-package.xml.patch  0001-workaround-for-boost-versions-1.61.patch  0002-disable-test-as-mentioned-in-https-bitbucket.org-omp.patch  0002-fix-check-for-package.xml.patch  0003-fix-cmake-error.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  read_this_before_releasing  releaser_history.json  rpm.store  tracks.yaml
CMakeModules/: OMPLVersion.cmake
dashing/: package.xml
debian/: changelog  control  copyright  gbp.conf  rules  rules.autotools  rules.python_distutils
demos/: RigidBodyPlanningWithControls.cpp
doc/markdown/: releaseNotes.md
groovy/: package.xml
indigo/: package.xml
jade/: package.xml
kinetic/: package.xml
rpm/: ros-indigo-ompl.spec  ros-jade-ompl.spec  ros-kinetic-ompl.spec  ros-lunar-ompl.spec  ros-melodic-ompl.spec  ros-noetic-ompl.spec  template.spec
src/ompl/geometric/src/: PathSimplifier.cpp
tests/: CMakeLists.txt
tests/base/: state_spaces.cpp
