<?xml version="1.0"?>
<package>
  <name>ompl</name>
  <version>0.12.2002369</version>
  <description>OMPL is a free sampling-based motion planning library.</description>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>

  <url type="website">http://ompl.kavrakilab.org</url>
  <url type="bugtracker">https://bitbucket.org/ompl/ompl/issues</url>
  <url type="repository">https://bitbucket.org/ompl/ompl/</url>

  <author>Kavraki Lab</author>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>cmake</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>boost</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
